--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stok Yönetim Sistemi</title>
+  <title>Material Efficiency System - Stok Yönetim Sistemi</title>
   <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
@@ -47,6 +47,42 @@
       align-items: center;
       min-height: 100vh;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      flex-direction: column;
+      gap: 40px;
+    }
+
+    /* Muhteşem başlık üstte */
+    .auth-header {
+      font-family: 'Segoe UI Black', 'Arial Black', Arial, sans-serif;
+      font-size: 5rem;
+      color: white;
+      text-transform: uppercase;
+      letter-spacing: 0.2em;
+      text-align: center;
+      user-select: none;
+      text-shadow:
+        3px 3px 8px rgba(0,0,0,0.5),
+        0 0 20px #2563eb,
+        0 0 30px #3b82f6;
+      animation: glow 2.5s ease-in-out infinite alternate;
+      max-width: 90vw;
+    }
+
+    @keyframes glow {
+      from {
+        text-shadow:
+          3px 3px 8px rgba(0,0,0,0.5),
+          0 0 20px #2563eb,
+          0 0 30px #3b82f6;
+        color: #2563eb;
+      }
+      to {
+        text-shadow:
+          3px 3px 15px rgba(0,0,0,0.8),
+          0 0 40px #1e40af,
+          0 0 50px #1e40af;
+        color: #1e40af;
+      }
     }
 
     .auth-box {
@@ -89,12 +125,13 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
+    /* Yeni Material Efficiency System başlığı için stil */
     .mes-title {
-      font-size: 3.5rem;
-      font-weight: 900;
+      font-size: 3.5rem;       /* Çok büyük puntolar */
+      font-weight: 900;        /* Kalın yazı */
       color: var(--primary-color);
       text-align: center;
-      letter-spacing: 0.15em;
+      letter-spacing: 0.15em;  /* Harf aralığı */
       text-transform: uppercase;
       text-shadow:
         2px 2px 4px rgba(0,0,0,0.15),
@@ -253,6 +290,7 @@
       background: white;
       border-radius: 12px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      padding: 1rem;
     }
 
     table {
@@ -326,127 +364,76 @@
       flex-wrap: wrap;
     }
 
-    /* Preview modal */
-    .preview-modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.95);
-      z-index: 10001;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
+    /* Editable excel table styles */
+    #editable-table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 1rem;
     }
 
-    .preview-content {
-      background: white;
-      padding: 2rem;
-      border-radius: 16px;
-      width: 90%;
-      height: 80%;
-      overflow-y: auto;
-      position: relative;
-      white-space: pre-wrap;
-      font-family: monospace, monospace;
-      font-size: 14px;
-      line-height: 1.4;
+    #editable-table th,
+    #editable-table td {
+      border: 1px solid var(--border-color);
+      padding: 8px;
+      text-align: left;
+      min-width: 80px;
     }
 
-    .preview-close-btn {
-      position: absolute;
-      top: 12px;
-      right: 12px;
-      background: var(--danger-color);
-      border: none;
-      color: white;
-      padding: 6px 12px;
-      border-radius: 6px;
+    #editable-table th {
+      background-color: var(--accent-color);
       cursor: pointer;
-      font-weight: 600;
+      user-select: none;
     }
 
-    /* Action buttons */
-    .action-buttons {
+    #editable-table td[contenteditable="true"] {
+      background-color: #fff;
+      cursor: text;
+    }
+
+    #editable-table td[contenteditable="true"]:focus {
+      outline: 2px solid var(--primary-color);
+      background-color: #e0f0ff;
+    }
+
+    /* Add buttons container */
+    #add-buttons {
+      margin-top: 10px;
       display: flex;
-      gap: 1rem;
-      margin: 1rem 0;
+      gap: 10px;
       flex-wrap: wrap;
-      align-items: center;
-    }
-
-    /* User info */
-    .user-info {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      font-weight: 500;
-    }
-
-    /* Loading */
-    .loading {
-      display: none;
-      text-align: center;
-      padding: 2rem;
-    }
-
-    .spinner {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid var(--primary-color);
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-      margin: 0 auto;
-    }
-
-    @keyframes spin {
-      0% {
-        transform: rotate(0deg);
-      }
-      100% {
-        transform: rotate(360deg);
-      }
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      .container {
-        padding: 1rem;
-      }
-
-      .action-buttons {
-        flex-direction: column;
-        align-items: stretch;
-      }
-
-      .navigation {
-        flex-direction: column;
-      }
-
-      .stock-lists {
-        grid-template-columns: 1fr;
-      }
     }
   </style>
 </head>
 <body>
   <!-- Authentication Page -->
   <div id="auth-page" class="auth-container" role="main" aria-label="Kullanıcı Girişi ve Kayıt">
-    <div class="auth-box">
-      ----------Material Efficiency System----------
-      <br />
-      Producer: Muhammed Enes Sevgi
-      <div class="auth-tabs" role="tablist">
-        <div class="auth-tab active" role="tab" tabindex="0" aria-selected="true" aria-controls="login-form" id="login-tab"
-          onclick="switchAuthTab('login')" onkeydown="if(event.key==='Enter'){switchAuthTab('login')}">Giriş Yap</div>
-        <div class="auth-tab" role="tab" tabindex="0" aria-selected="false" aria-controls="register-form" id="register-tab"
-          onclick="switchAuthTab('register')" onkeydown="if(event.key==='Enter'){switchAuthTab('register')}">Kayıt Ol</div>
+    <div class="auth-header" aria-hidden="true">Material Efficiency System</div>
+    <div class="auth-box" >
+      <div class="auth-tabs" role="tablist" aria-label="Giriş ve Kayıt Sekmeleri">
+        <div
+          class="auth-tab active"
+          role="tab"
+          tabindex="0"
+          aria-selected="true"
+          aria-controls="login-form"
+          id="login-tab"
+          onclick="switchAuthTab('login')"
+          onkeydown="if(event.key==='Enter'){switchAuthTab('login')}"
+        >
+          Giriş Yap
+        </div>
+        <div
+          class="auth-tab"
+          role="tab"
+          tabindex="0"
+          aria-selected="false"
+          aria-controls="register-form"
+          id="register-tab"
+          onclick="switchAuthTab('register')"
+          onkeydown="if(event.key==='Enter'){switchAuthTab('register')}"
+        >
+          Kayıt Ol
+        </div>
       </div>
 
       <div id="login-form" role="tabpanel" aria-labelledby="login-tab">
@@ -536,16 +523,20 @@
           <div id="files-list"></div>
         </section>
 
-        <div class="action-buttons" style="justify-content:flex-end; margin-top:0;">
-          <button class="btn btn-success" id="export-excel-btn" onclick="exportFilteredExcel()" style="display:none;">📥 Filtrelenmiş Tabloyu Excel Olarak Dışa Aktar</button>
-        </div>
-
         <div class="loading" id="table-loading" aria-live="polite" aria-busy="false">
           <div class="spinner" role="status" aria-label="Yükleniyor"></div>
           <p>Tablo yükleniyor...</p>
         </div>
 
         <section id="table-container" class="table-container" tabindex="0" aria-label="Excel Tablosu"></section>
+
+        <!-- Satır ve sütun ekleme butonları -->
+        <div id="add-buttons" aria-label="Satır ve sütun ekleme butonları" style="display:none;">
+          <button class="btn btn-primary" onclick="addRow()">+ Satır Ekle</button>
+          <button class="btn btn-primary" onclick="addColumn()">+ Sütun Ekle</button>
+          <button class="btn btn-success" onclick="saveTableChanges()">Tabloyu Kaydet</button>
+          <button class="btn btn-warning" onclick="exportFilteredExcel()">Excel'i Dışa Aktar</button>
+        </div>
       </div>
     </div>
   </div>
@@ -685,7 +676,6 @@
       const modal = document.getElementById(modalId);
       modal.style.display = 'flex';
       modal.setAttribute('aria-hidden', 'false');
-      // Odak yönetimi
       const focusable = modal.querySelector('input,button,[tabindex]:not([tabindex="-1"])');
       if (focusable) focusable.focus();
     }
@@ -724,6 +714,8 @@
         files: [],
         created: new Date().toISOString(),
         shares: [],
+        products: [],
+        stockMovements: [],
       };
 
       user.stockLists.push(newList);
@@ -778,6 +770,9 @@
 
       if (!currentList) return;
 
+      if (!currentList.products) currentList.products = [];
+      if (!currentList.stockMovements) currentList.stockMovements = [];
+
       document.getElementById('main-page').style.display = 'none';
       document.getElementById('list-detail-page').style.display = 'block';
       document.getElementById('list-detail-title').textContent = currentList.name;
@@ -785,7 +780,10 @@
 
       loadListFiles();
       clearTableAndFilters();
-      document.getElementById('export-excel-btn').style.display = 'none';
+      document.getElementById('export-excel-btn')?.style.display && (document.getElementById('export-excel-btn').style.display = 'none');
+
+      renderProductsTable();
+      renderStockMovements();
     }
 
     function goBack() {
@@ -796,7 +794,8 @@
       currentFilters = {};
       currentSort = { column: null, direction: 'asc' };
       clearTableAndFilters();
-      document.getElementById('export-excel-btn').style.display = 'none';
+      document.getElementById('export-excel-btn')?.style.display && (document.getElementById('export-excel-btn').style.display = 'none');
+      document.getElementById('add-buttons').style.display = 'none';
     }
 
     function closeList() {
@@ -866,7 +865,6 @@
             uploaded: new Date().toISOString(),
           };
 
-          // Kullanıcı verilerini güncelle
           const users = JSON.parse(localStorage.getItem('users') || '{}');
           const user = users[currentUser];
           const listIndex = user.stockLists.findIndex((list) => list.id === currentList.id);
@@ -927,7 +925,7 @@
       reader.readAsDataURL(file);
     }
 
-    // Excel verisini göster
+    // Excel verisini göster (düzenlenebilir tablo ile)
     function showExcelData(fileIndex) {
       const file = currentList.files[fileIndex];
       if (!file || file.type !== 'excel') return;
@@ -940,31 +938,31 @@
         currentSort = { column: null, direction: 'asc' };
         displayTable(currentTableData);
         showLoading(false);
-        document.getElementById('export-excel-btn').style.display = 'inline-flex';
+        document.getElementById('add-buttons').style.display = 'flex';
       }, 100);
     }
 
-    // Tabloyu göster
+    // Tabloyu göster (düzenlenebilir hücrelerle)
     function displayTable(data) {
       const container = document.getElementById('table-container');
       if (!data || data.length === 0) {
         container.innerHTML = '<p>Gösterilecek veri bulunamadı.</p>';
+        document.getElementById('add-buttons').style.display = 'none';
         return;
       }
 
-      // Filtreleme ve sıralama uygula
       let filteredData = filterData(data);
       filteredData = sortData(filteredData);
 
       if (filteredData.length <= 1) {
         container.innerHTML = '<p>Seçili sütunlarda veri bulunamadı.</p>';
+        document.getElementById('add-buttons').style.display = 'none';
         return;
       }
 
-      let tableHTML = '<table><thead><tr>';
+      let tableHTML = '<table id="editable-table" aria-label="Düzenlenebilir Excel Tablosu"><thead><tr>';
 
-      // Sadece tikli sütunlar için başlık
-      data[0].forEach((header) => {
+      filteredData[0].forEach((header) => {
         if (currentFilters[header]) {
           const isSorted = currentSort.column === header;
           const sortClass = isSorted ? `sort-${currentSort.direction}` : '';
@@ -979,13 +977,102 @@
       for (let i = 1; i < filteredData.length; i++) {
         tableHTML += '<tr>';
         filteredData[i].forEach((cell) => {
-          tableHTML += `<td>${escapeHtml(cell || '')}</td>`;
+          tableHTML += `<td contenteditable="true">${escapeHtml(cell || '')}</td>`;
         });
         tableHTML += '</tr>';
       }
 
       tableHTML += '</tbody></table>';
+
       container.innerHTML = tableHTML;
+    }
+
+    // Satır ekleme
+    function addRow() {
+      if (!currentTableData || currentTableData.length === 0) return;
+
+      // Yeni boş satır: sütun sayısı kadar boş string
+      const colCount = currentTableData[0].length;
+      const newRow = new Array(colCount).fill('');
+      currentTableData.push(newRow);
+
+      displayTable(currentTableData);
+    }
+
+    // Sütun ekleme (kullanıcıdan başlık alarak)
+    function addColumn() {
+      if (!currentTableData || currentTableData.length === 0) return;
+
+      let newHeader = prompt('Yeni sütun başlığını giriniz:');
+      if (newHeader === null) return; // İptal edildi
+      newHeader = newHeader.trim();
+      if (!newHeader) {
+        alert('Başlık boş olamaz.');
+        return;
+      }
+
+      // Başlık zaten varsa uyar
+      if (currentTableData[0].includes(newHeader)) {
+        alert('Bu başlık zaten mevcut.');
+        return;
+      }
+
+      // Başlığı ekle
+      currentTableData[0].push(newHeader);
+
+      // Diğer satırlara boş hücre ekle
+      for (let i = 1; i < currentTableData.length; i++) {
+        currentTableData[i].push('');
+      }
+
+      // Filtrelerde yeni sütunu aktif yap
+      currentFilters[newHeader] = true;
+
+      setupColumnFilters(currentTableData[0]);
+      displayTable(currentTableData);
+    }
+
+    // Tablo kaydetme fonksiyonu
+    function saveTableChanges() {
+      const table = document.getElementById('editable-table');
+      if (!table) return;
+
+      const rows = table.querySelectorAll('tr');
+      const newData = [];
+
+      rows.forEach((row, rowIndex) => {
+        const cells = row.querySelectorAll(rowIndex === 0 ? 'th' : 'td');
+        const rowData = [];
+        cells.forEach(cell => {
+          rowData.push(cell.textContent.trim());
+        });
+        newData.push(rowData);
+      });
+
+      const excelFile = currentList.files.find(f => f.type === 'excel');
+      if (!excelFile) {
+        alert('Excel dosyası bulunamadı.');
+        return;
+      }
+
+      excelFile.data = newData;
+      currentTableData = newData;
+
+      const users = JSON.parse(localStorage.getItem('users') || '{}');
+      const user = users[currentUser];
+      const listIndex = user.stockLists.findIndex(list => list.id === currentList.id);
+
+      const fileIndex = user.stockLists[listIndex].files.findIndex(f => f.name === excelFile.name && f.type === 'excel');
+
+      if (fileIndex === -1) {
+        alert('Dosya bulunamadı.');
+        return;
+      }
+
+      user.stockLists[listIndex].files[fileIndex].data = newData;
+      localStorage.setItem('users', JSON.stringify(users));
+
+      alert('Tablo başarıyla kaydedildi!');
     }
 
     // HTML escape fonksiyonu
@@ -1131,7 +1218,7 @@
         currentList = user.stockLists[listIndex];
         loadListFiles();
         clearTableAndFilters();
-        document.getElementById('export-excel-btn').style.display = 'none';
+        document.getElementById('add-buttons').style.display = 'none';
       }
     }
 
@@ -1149,10 +1236,10 @@
       currentFilters = {};
       currentSort = { column: null, direction: 'asc' };
       currentTableData = [];
-      document.getElementById('export-excel-btn').style.display = 'none';
+      document.getElementById('add-buttons').style.display = 'none';
     }
 
-    // Filtrelenmiş tabloyu Excel olarak dışa aktar
+    // Excel dışa aktarma
     function exportFilteredExcel() {
       if (!currentTableData || currentTableData.length === 0) {
         alert('Dışa aktarılacak tablo bulunamadı.');
@@ -1174,6 +1261,11 @@
       const fileName = `filtrelenmis-stok-tablosu-${currentList.name}-${new Date().toISOString().slice(0, 10)}.xlsx`;
       XLSX.writeFile(wb, fileName);
     }
+
+    // --- Aşağıdaki ürün ve hareketler ile ilgili fonksiyonlar kaldırıldı ---
+    function renderProductsTable() {}
+    function updateStock() {}
+    function renderStockMovements() {}
   </script>
 </body>
 </html>
