--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 <body>
   <!-- Authentication Page -->
   <div id="auth-page" class="auth-container" role="main" aria-label="Kullanıcı Girişi ve Kayıt">
-    <div class="auth-header" aria-hidden="true">Material Efficiency System</div>
+    <div class="auth-header" aria-hidden="true">Material Efficiency System / Producer: M.Enes Sevgi</div>
     <div class="auth-box" >
       <div class="auth-tabs" role="tablist" aria-label="Giriş ve Kayıt Sekmeleri">
         <div
